test/rules/ok/wf_05.zc
(* We divide by zero, it is allowed in the definition and we can
   use rlet_unfold since it does not perform field-rewriting. *)

prove [
  x <-$ Fq;
  y <-$ Fq;
  z <-$ Fq;
] : not (x = y) /\ ((x - y) / (x - y) = z).
rnorm.
print_goals : t2.